<resources>
    <string name="app_name">Online Health Care</string>
    <string name="com.crashlytics.android.build_id" translatable="false">223205775</string>

    <string name="total_confirmed">Confirmed Cases:</string>
    <string name="total_recovered">Recovered Cases:</string>
    <string name="total_deaths">Confirmed Deaths:</string>

    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>

    <string name="feature_soon">In progress</string>

    <!-- Bottom Navigation Menu-->
    <string name="nav_feed">News</string>
    <string name="nav_covid_by_country">Covid-19</string>
    <string name="nav_notifications">Notifications</string>
</resources>
